[package]
name = "forkpty"
version = "0.1.0"
authors = ["Igor Bykov <igorb.dev@websm.io>"]
edition = "2018"

[dependencies]
nix = "0.17.0"
libc = "0.2.67"
thiserror = "1.0.11"
derive_more = "0.99.3"

tokio = { version = "0.2.13", features = ["full"] }
mio = { version = "0.6.21" }
futures = { version = "0.3.4" }
