[package]
name = "forkpty"
version = "0.1.0"
authors = ["Igor Bykov <con29rus@gmail.com>"]
edition = "2018"

[features]
async = ["tokio", "mio", "futures"]

[dependencies]
nix = "0.17.0"
libc = "0.2.67"
thiserror = "1.0.11"
derive_more = "0.99.3"

mio = { version = "0.6.21", optional = true }
futures = { version = "0.3.4", optional = true }

[dependencies.tokio]
version = "0.2.13"
features = ["signal", "io-util", "io-driver"]
optional = true
